Fixed front page on firefox. Fuck firefox

--- a/html-css-template/css/_global.scss
+++ b/html-css-template/css/_global.scss
@@ -19,7 +19,8 @@ body {
 }
 
 article{
-	overflow: hidden;
+	float: left;
+	margin: 0 auto;
 }
 
 //forms
