--- a/html-css-template/css/style.css
+++ b/html-css-template/css/style.css
@@ -32,7 +32,8 @@ body {
   padding-left: 1rem; }
 
 article {
-  overflow: hidden; }
+  float: left;
+  margin: 0 auto; }
 
 form input, form button, form label {
   font-size: 20px; }
